@@ -38,3 +38,6 @@ Thanks for your help!
 > Newer versions of ghc changed their exception handling types, and
 > I coded git-annex to use the new style and not the old. gch6 6.12 will
 > work. I do not think there is a backport available though. --[[Joey]]
+>
+> Ok, found and deployed a workaround. It is not tested. Let me know how it
+> works for you. --[[Joey]]
